Fixed svg warnings; fixed alignment of note-description in template

--- a/src/notes/FluxNotesEditor.scss
+++ b/src/notes/FluxNotesEditor.scss
@@ -2,6 +2,7 @@
 
 #clinical-notes {
     padding-left:25px;
+    align-self: flex-start;
     #note-description {
         .note-description-detail {
             margin: 0;
